# pyspark-pc-pairs

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
demo/: demo.py
src/: pc_pairs.py
tests/: test_pc_pairs.py
