[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyspark-pc-pairs"
version = "0.1.0"
description = "PySpark: пары «Имя продукта – Имя категории» + продукты без категорий"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pyspark>=3.4,<4.0",
  "pytest>=7.0",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
