[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyspark-pc-pairs"
version = "0.1.0"
description = "PySpark: пары «Имя продукта – Имя категории» + продукты без категорий"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { text = "MIT" }
authors = [{ name = "KVadim-K" }]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "pyspark>=3.4,<4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/KVadim-K/pyspark-pc-pairs"

# ВАЖНО: у нас не пакет, а модуль src/pc_pairs.py — объявляем его явно
[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["pc_pairs"]

# Pytest запустится с видимым src
[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
